WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90291
[BlackBerry] Backing store output flickers when using WebPageCompositor
https://bugs.webkit.org/show_bug.cgi?id=90291
Summary
[BlackBerry] Backing store output flickers when using WebPageCompositor
Arvid Nilsson
Reported
2012-06-29 10:04:00 PDT
The backing store doesn't know when the API client swaps the buffers, so it doesn't know when to signal the blit generation condvar. Instead, use EGL fence sync when available, so we don't have to know. This is PR152132
Attachments
Patch
(17.44 KB, patch)
2012-07-31 02:41 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Patch
(16.97 KB, patch)
2012-07-31 07:01 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-07-31 02:41:36 PDT
Created
attachment 155476
[details]
Patch
Rob Buis
Comment 2
2012-07-31 06:48:06 PDT
Comment on
attachment 155476
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-07-31 06:50:08 PDT
Comment on
attachment 155476
[details]
Patch Rejecting
attachment 155476
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ingStore_p.h Hunk #1 succeeded at 369 (offset 1 line). patching file Source/WebKit/blackberry/WebKitSupport/BackingStoreTile.cpp patching file Source/WebKit/blackberry/WebKitSupport/BackingStoreTile.h patching file Source/WebKit/blackberry/WebKitSupport/SurfacePool.cpp patching file Source/WebKit/blackberry/WebKitSupport/SurfacePool.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Rob Buis']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/13404035
Arvid Nilsson
Comment 4
2012-07-31 07:01:19 PDT
Created
attachment 155524
[details]
Patch
Arvid Nilsson
Comment 5
2012-07-31 07:07:59 PDT
Comment on
attachment 155524
[details]
Patch New patch without merge conflicts this time...
Antonio Gomes
Comment 6
2012-07-31 07:14:07 PDT
Comment on
attachment 155524
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=155524&action=review
> Source/WebKit/blackberry/Api/BackingStore.cpp:1133 > + // TODO: This code is only needed for EGLImage code path, but preferrably BackingStore
WebKit generally uses FIXME
> Source/WebKit/blackberry/Api/BackingStore.cpp:1538 > + // TODO: This code is only needed for EGLImage code path, but preferrably BackingStore
ditto
Rob Buis
Comment 7
2012-07-31 07:16:17 PDT
Comment on
attachment 155524
[details]
Patch LGTM.
WebKit Review Bot
Comment 8
2012-07-31 07:35:40 PDT
Comment on
attachment 155524
[details]
Patch Clearing flags on attachment: 155524 Committed
r124199
: <
http://trac.webkit.org/changeset/124199
>
WebKit Review Bot
Comment 9
2012-07-31 07:35:44 PDT
All reviewed patches have been landed. Closing bug.
Arvid Nilsson
Comment 10
2012-07-31 12:33:07 PDT
I forgot to say in the changelog, this is PR 152132
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug