[BlackBerry] Backing store output flickers when using WebPageCompositor https://bugs.webkit.org/show_bug.cgi?id=90291

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-07-31
Reviewed by Antonio Gomes.

The backing store doesn't know when the API client swaps the buffers,
so it doesn't know when to signal the blit generation condition
variable. Fixed by using EGL fence sync instead, when available, so we
don't have to know.

Reviewed internally by Filip Spacek.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::BackingStorePrivate):
(BlackBerry::WebKit::BackingStorePrivate::~BackingStorePrivate):
(BlackBerry::WebKit::BackingStorePrivate::render):
(BlackBerry::WebKit::BackingStorePrivate::blitContents):
(BlackBerry::WebKit::BackingStorePrivate::compositeContents):
* Api/BackingStore_p.h:
(BackingStorePrivate):
* WebKitSupport/BackingStoreTile.cpp:
(BlackBerry::WebKit::TileBuffer::TileBuffer):
* WebKitSupport/BackingStoreTile.h:
(BlackBerry::WebKit::TileBuffer::syncObject):
(BlackBerry::WebKit::TileBuffer::setSyncObject):
(TileBuffer):
* WebKitSupport/SurfacePool.cpp:
(WebKit):
(BlackBerry::WebKit::SurfacePool::SurfacePool):
(BlackBerry::WebKit::SurfacePool::initialize):
(BlackBerry::WebKit::SurfacePool::waitForBuffer):
(BlackBerry::WebKit::SurfacePool::notifyBuffersComposited):
* WebKitSupport/SurfacePool.h:
(SurfacePool):

Canonical link: https://commits.webkit.org/110574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124199 268f45cc-cd09-0410-ab3c-d52691b4dbfc